Fix grid cols on small screen

--- a/src/components/main-body/main-body.css
+++ b/src/components/main-body/main-body.css
@@ -11,13 +11,14 @@
     opacity: 0;
     animation: fadeIn 0.3s ease-in forwards;
     animation-delay: 1s;
-    min-width: 400px;
+    min-width: 300px;
 
     .cards-grid {
       background-color: var(--background);
       border-radius: 1rem;
       padding: 1rem;
       display: grid;
+      justify-items: center;
       grid-template-columns: 1fr 1fr 1fr;
       gap: 1rem;
     }
@@ -25,12 +26,12 @@
 }
 
 @media screen and (max-width: 1100px) {
-  .main-body .cards-grid {
+  .main-body-wrapper .main-body .cards-grid {
     grid-template-columns: 1fr 1fr;
   }
 }
 @media screen and (max-width: 600px) {
-  .main-body .cards-grid {
+  .main-body-wrapper .main-body .cards-grid {
     grid-template-columns: 1fr;
   }
 }
